[metadata]
name = remclient
version = 1.1.2
description = client library for REM server
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration
    Topic :: Software Development

[options]
install_requires = six

