[metadata]
name = native-fork-locking
version = 0.2.0
description = "This module provides locks that can be safely used for frequently forked applications"
author = Kirill Trofimenkov
author_email = trofimenkov@yandex-team.ru
url = https://github.com/heni/rem
keywords = locks fork rem
classifiers = Development Status :: 5 - Production/Stable, Environment :: Console, License :: OSI Approved :: MIT License, Programming Language :: Python :: 2.7, Programming Language :: Python :: 2 :: Only
